--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
-        "mongodb/mongodb": "^1.17"
+        "mongodb/mongodb": "^1.17",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
